--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -18,7 +18,7 @@
 
 <div class="slide" id="spills">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota</div>
-<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data. <span class="legendary" style="background-color:#888888;color:#ffffff;">Other pipelines and spills</span> displayed for context.</div>
+<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data and markers sized by gallons spilled. <span class="legendary" style="background-color:#888888;color:#ffffff;">Other pipelines</span> displayed for context.</div>
 
 <div id="map"></div>
 
@@ -28,7 +28,7 @@
 
 <div class="slide" id="mnspills">
 <div class="chartTitle">Minnesota pipeline incidents by year</div>
-<div class="chatter">Since 2002, there have been 125 hazardous liquid <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> in Minnesota, resulting in two deaths, two injuries and about $40 million in damage.</div>
+<div class="chatter">Since 2002, about 125 <span class="legendary" style="background-color:#333333;color:#ffffff;">hazardous liquid spills</span> in Minnesota have resulted in two deaths, two injuries and about $40 million in damage.</div>
 
 <div id="chartMNSpills"></div>
 
@@ -38,8 +38,8 @@
 </div>
 
 <div class="slide" id="minnesota">
-<div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">About 60 <span class="legendary gray5">spill or release incidents</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002, a third of which were considered <span class="legendary" style="background-color:#888888;color:#ffffff;">significant</span>, meaning five or more barrels in volume were spilled, or the incident resulted in an explosion, death, injury or $50,000 in damage.</div>
+<div class="chartTitle">Enbridge pipeline incidents in Minnesota by year</div>
+<div class="chatter">About 60 <span class="legendary gray5">hazardous liquid spills</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002, a third of which were considered <span class="legendary" style="background-color:#888888;color:#ffffff;">significant</span>, meaning five or more barrels in volume were spilled, or the incident resulted in an explosion, death, injury or $50,000 in damage.</div>
 
 <div id="chartMN"></div>
 
@@ -51,7 +51,7 @@
 
 <div class="slide" id="incidents">
 <div class="chartTitle">Pipelines spills in Minnesota by gallons</div>
-<div class="chatter">Since 2002, there have been about 336,300 <span class="legendary" style="background-color:#333333;color:#ffffff;">gallons spilled on Enbridge pipelines</span> -- mostly of crude oil -- in Minnesota, about a third of the 1 million gallons of <span class="legendary" style="background-color:#888888;color:#ffffff;">hazardous liquids spilled</span> statewide over the time period.</div>
+<div class="chatter">Since 2002, there have been about 336,300 <span class="legendary" style="background-color:#333333;color:#ffffff;">gallons spilled on Enbridge pipelines</span> -- mostly of crude oil -- in Minnesota, about a third of the more than 1 million gallons of <span class="legendary" style="background-color:#888888;color:#ffffff;">hazardous liquids released statewide</span> over the time period.</div>
 
 <div id="chartGallons"></div>
 
