--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -22,7 +22,7 @@
 
 <div id="map"></div>
 
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 </div>
 
@@ -32,7 +32,7 @@
 
 <div id="chartMNSpills"></div>
 
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 </div>
@@ -43,7 +43,7 @@
 
 <div id="chartMN"></div>
 
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 </div>
@@ -55,7 +55,7 @@
 
 <div id="chartGallons"></div>
 
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 </div>
