--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -39,7 +39,7 @@
 
 <div class="slide" id="minnesota">
 <div class="chartTitle">Enbridge pipeline incidents in Minnesota by year</div>
-<div class="chatter">About 60 <span class="legendary gray5">hazardous liquid spills</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002, a third of which were considered <span class="legendary" style="background-color:#888888;color:#ffffff;">significant</span>, meaning five or more barrels in volume were spilled, or the incident resulted in an explosion, death, injury or $50,000 in damage.</div>
+<div class="chatter">About 60 <span class="legendary gray5">hazardous liquid spills</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002, a third of which were considered <span class="legendary" style="background-color:#888888;color:#ffffff;">significant</span>, meaning 210 more gallons in volume were spilled, or the incident resulted in an explosion, death, injury or $50,000 in damage.</div>
 
 <div id="chartMN"></div>
 
