styling for school flight dataviz project

--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -18,12 +18,13 @@
 <div class="slide" id="lookup">
 
 <div id="wrapper">
+<div class="outline">
 <div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Click here to select a district </div>
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by district name" /></div>
 <ul id="listedSchools" class="dropdown" tabindex="1">
 </ul>
-
+</div>
 <div class="divider"></div>
 
 <div id='thisDistrict'>Minneapolis Public School District</div>
@@ -31,26 +32,26 @@
 
 <div class="chart">
   <div class="chartTitle">Students opting for other districts</div>
-  <div class="chatter">Percentage of school-aged residents attending <span class="legendary" style="background-color:#a3858b;color:#ffffff">charter schools</span> or <span class="legendary" style="background-color:#4c1926;color:#ffffff">open enrolling</span> in another district.</div>
+  <div class="chatter">Percentage of school-aged residents attending <span class="legendary" style="background-color:#b2cba2;">charter schools</span> or <span class="legendary" style="background-color:#a5c3d2;">open enrolling</span> in another district.</div>
   <div id="leavingChart" class="chartDiv"></div>
 </div>
 
 <div class="chart">
   <div class="chartTitle">Students coming in</div>
-  <div class="chatter">Percentage of the districts's enrollment from <span class="legendary" style="background-color:#865f67;color:#ffffff">students who live elsewhere</span>.</div>
+  <div class="chatter">Percentage of the districts's enrollment from<br/> <span class="legendary" style="background-color:#b2cba2;">students who live elsewhere</span>.</div>
   <div id="incomingChart" class="chartDiv"></div>
 </div>
 
 <div class="chart">
 <div class="chartTitle">School choice rates by race</div>
-   <div class="chatter">Compares <span class="legendary" style="background-color:#333333;color:#ffffff">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#865f67;color:#ffffff">students who enrolled in other districts</span> in 2016.</div>
+   <div class="chatter">Compares <span class="legendary" style="background-color:#b2cba2;">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#a5c3d2;">students who enrolled in other districts</span> in 2016.</div>
   <div id="raceChart" class="chartDiv"></div>
   <div class="byline">Note: populations less than three not represented</div>
 </div>
 
 <div class="chart">
   <div class="chartTitle">District enrollment vs. residents</div>
-     <div class="chatter">Compares the number of <span class="legendary" style="background-color:#333333;color:#ffffff">residents</span> in a district to its student <span class="legendary" style="background-color:#693c46;color:#ffffff">enrollment</span> over time.</div>
+     <div class="chatter">Compares the number of <span class="legendary" style="background-color:#b2cba2;">residents</span> in a district to its student <span class="legendary" style="background-color:#a5c3d2;">enrollment</span> over time.</div>
   <div id="enrollmentChart" class="chartDiv"></div>
   <div class="byline">Note: some records were redacted</div>
 </div>
