--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -13,11 +13,10 @@
 
 </head>
 <body>
- 
 
-<div class="slide" id="lookup">
 
 <div id="wrapper">
+<div class="slide" id="lookup">
 <div class="outline">
 <div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Click here to select a district </div>
 
@@ -44,7 +43,7 @@
 
 <div class="chart">
 <div class="chartTitle">School choice rates by race</div>
-   <div class="chatter">Compares <span class="legendary" style="background-color:#b2cba2;">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#a5c3d2;">students who enrolled in other districts</span> in 2016.</div>
+   <div class="chatter">Compares <span class="legendary" style="background-color:#b2cba2;">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#a5c3d2;">students who enrolled in other districts</span> in 2016-2017.</div>
   <div id="raceChart" class="chartDiv"></div>
   <div class="byline">Note: populations less than three not represented</div>
 </div>
@@ -64,7 +63,7 @@
 </div>
 
 </div>
-</div>
+
 
 <div class="slide" id="charter">
 <div class='map-overlay-container'>
@@ -88,6 +87,8 @@
 <div id="map"></div>
 
 <div class="byline">Source: Minnesota Department of Education, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="../data/maindata.xlsx" target="new_">Download Data</a> -->
+</div>
+</div>
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
