--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -18,9 +18,9 @@
 <div id="wrapper">
 <div class="slide" id="lookup">
 <div class="outline">
-<div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Click here to select a district </div>
+<div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Click here to choose a district </div>
 
-<div id="filter"><input type="search" id="filter_box" placeholder="Search by district name" /></div>
+<div id="filter"><input type="search" id="filter_box" placeholder="Filter by district name" /></div>
 <ul id="listedSchools" class="dropdown" tabindex="1">
 </ul>
 </div>
@@ -29,7 +29,7 @@
 <div id='thisDistrict'>Minneapolis Public School District</div>
 <div class="chatter statBar" id="county">Hennepin County (Core Cities)</div>
 
-<div class="chart">
+<div class="chart left">
   <div class="chartTitle">Students opting for other districts</div>
   <div class="chatter">Percentage of school-aged residents attending <span class="legendary" style="background-color:#b2cba2;">charter schools</span> or <span class="legendary" style="background-color:#a5c3d2;">open enrolling</span> in another district.</div>
   <div id="leavingChart" class="chartDiv"></div>
@@ -41,7 +41,7 @@
   <div id="incomingChart" class="chartDiv"></div>
 </div>
 
-<div class="chart">
+<div class="chart left">
 <div class="chartTitle">School choice rates by race</div>
    <div class="chatter">Compares <span class="legendary" style="background-color:#b2cba2;">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#a5c3d2;">students who enrolled in other districts</span> in 2016-2017.</div>
   <div id="raceChart" class="chartDiv"></div>
