--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -18,9 +18,9 @@
 <div id="wrapper">
 <div class="slide" id="lookup">
 <div class="outline">
-<div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Click here to choose a district </div>
+<div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Select a school district </div>
 
-<div id="filter"><input type="search" id="filter_box" placeholder="Filter by district name" /></div>
+<div id="filter"><input type="search" id="filter_box" placeholder="Filter by school district name" /></div>
 <ul id="listedSchools" class="dropdown" tabindex="1">
 </ul>
 </div>
