--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -43,14 +43,14 @@
 
 <div class="chart left">
 <div class="chartTitle">School choice rates by race</div>
-   <div class="chatter">Compares <span class="legendary" style="background-color:#b2cba2;">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#a5c3d2;">students who enrolled in other districts</span> in 2016-2017.</div>
+   <div class="chatter">Compares <span class="legendary" style="background-color:#a5c3d2;">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#b2cba2;">students who enrolled in other districts</span> in 2016-2017.</div>
   <div id="raceChart" class="chartDiv"></div>
   <div class="byline">Note: populations less than three not represented</div>
 </div>
 
 <div class="chart">
   <div class="chartTitle">District enrollment vs. residents</div>
-     <div class="chatter">Compares the number of <span class="legendary" style="background-color:#b2cba2;">residents</span> in a district to its student <span class="legendary" style="background-color:#a5c3d2;">enrollment</span> over time.</div>
+     <div class="chatter">Compares the number of <span class="legendary" style="background-color:#a5c3d2;">residents</span> in a district to its student <span class="legendary" style="background-color:#b2cba2;">enrollment</span> over time.</div>
   <div id="enrollmentChart" class="chartDiv"></div>
   <div class="byline">Note: some records were redacted</div>
 </div>
