--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -36,7 +36,7 @@
 
 <div class="chart">
   <div class="chartTitle">Students coming in</div>
-  <div class="chatter">Percentage of the districts's enrollment from<br/> <span class="legendary" style="background-color:#b2cba2;">students who live elsewhere</span>.</div>
+  <div class="chatter">Percentage of the district's enrollment from<br/> <span class="legendary" style="background-color:#b2cba2;">students who live elsewhere</span>.</div>
   <div id="incomingChart" class="chartDiv"></div>
 </div>
 
