--- a/20140714-smoking/builds/development/index.html
+++ b/20140714-smoking/builds/development/index.html
@@ -33,11 +33,13 @@
 
 <div id='map'></div>
 
+<div class="breaker"></div>
+
 <h3>Smoking prevalence over time, by county</h3>
 
 <div id="chart"><svg width="600" height="750" viewBox="0 0 800 750" preserveAspectRatio="xMidYMid"></svg></div>
 
-<div class="byline">Source: <a href="http://ghdx.healthdata.org/record/united-states-smoking-prevalence-county-1996-2012" target="new_">IHME</a>, <a href="http://quickfacts.census.gov/qfd/states/27/27173.html" target="new_">U.S. Census Bureau</a> | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: <a href="http://ghdx.healthdata.org/record/united-states-smoking-prevalence-county-1996-2012" target="new_">IHME</a>, <a href="http://quickfacts.census.gov/qfd/states/27/27173.html" target="new_">U.S. Census Bureau</a> | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
 <script src="js/d3.v3.min.js"></script>
