fixes and updates

--- a/20141226-internet/builds/development/index.html
+++ b/20141226-internet/builds/development/index.html
@@ -45,7 +45,7 @@
 <p>The map depicts percentage of households with available high-speed broadband service by county.</p>
 </div>
 
-<div class="byline">Source: Minnesota DEED | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: Minnesota DEED | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 
 </div>
 
