--- a/20141021-council-transit-survey/builds/development/index.html
+++ b/20141021-council-transit-survey/builds/development/index.html
@@ -530,6 +530,8 @@ Commers said he primarily rides the No. 3, 87 and 16.
 </div>
 </div>
 
+<div class="breaker"></div>
+
 <div class="byline">Source: Metro Transit | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
