fixes and updates

--- a/20150111-mia/builds/development/index.html
+++ b/20150111-mia/builds/development/index.html
@@ -42,10 +42,8 @@
 <p >When the MIA opened in January 1915, it owned only 327 works of art, including 15 paintings and three African objects. In the past century, that collection has grown to 88,738 objects from every continent.</p>
 <p>This interactive chart provides a year-by-year look at the number of objects added to the collection. By clicking on the colored headings at top, you can break down the data into individual areas.</p>
 <p>Prints &amp; drawings is the biggest - spurred by a 1916 acquisition financed by Minneapolis Journal publisher Herschel Jones - while the Asian collections have grown substantially in the past half century, thanks in large part to longtime benefactor Bruce Dayton's interest in Chinese art and the 2013 acquisition of the Clark Collection of Japanese Art.</p>
- 
-<p style="font-size:10px; color:#ccc;">Source: Minneapolis Institute of Arts, data analysis by Frances Lloyd-Baynes</p>
 
-<div class="byline">Source: Minnesota Institute of Art | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: Minnesota Institute of Art | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </body>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
