--- a/20150125-outstate/builds/development/index.html
+++ b/20150125-outstate/builds/development/index.html
@@ -66,7 +66,7 @@
 <p></p>
 <small>Property tax credits not represented.</small>
 
-<div class="byline">Source: Minnesota House Research Office | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: Minnesota House Research Office | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 <a href="javascript:void(0);" class="zoom">Reset View</a>
