--- a/20150103-bridges/builds/development/index.html
+++ b/20150103-bridges/builds/development/index.html
@@ -59,7 +59,9 @@ Sufficiency Rating
   </thead>
 </table>
 
-<div class="byline">Source: Minnesota Department of Transportation | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="breaker"></div>
+
+<div class="byline">Source: Minnesota Department of Transportation | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
