--- a/20150125-ats/builds/development/index.html
+++ b/20150125-ats/builds/development/index.html
@@ -60,7 +60,9 @@
 
 </div>
 
-<div class="byline">Source: Clearway Minnesota | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="breaker"></div>
+
+<div class="byline">Source: Clearway Minnesota | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 
 </div>
 
