--- a/20171022-bikelanes/builds/development/index.html
+++ b/20171022-bikelanes/builds/development/index.html
@@ -28,7 +28,7 @@
 
 <div id="stp" class="slide">
 <div class="chartTitle">The evolution of St. Paul bike lanes</div>
-<div class="chatter">Data show the impact of airport noise at <span class="legendary orange1">55 decibel noise level</span> versus the <span class="legendary orange3">65</span> tracked by the Federal Aviation Administration, along with <span class="legendary orange4">60</span> and <span class="legendary orange5">70 decibel noise level</span> for reference.</div>
+<div class="chatter">Shows the expansion of the St. Paul bike lane system through snapshots of additions by <span class="legendary gray3">2005</span>, <span class="legendary green3">2013</span> and <span class="legendary red4">2017</span>.</div>
 
 <div id="mapSTP" class="map"></div>
 
@@ -41,7 +41,7 @@
 
 <div id="chartChange" class="chart"></div>
 
-<div class="byline">Source: City of Minneapolis, City of St. Paul | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: City of Minneapolis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 </div>
