--- a/20140629-bees/20140629-bees-heatmap/index.html
+++ b/20140629-bees/20140629-bees-heatmap/index.html
@@ -51,7 +51,7 @@ var southWest = L.latLng(40.78054, -80.22217),
     bounds = L.latLngBounds(southWest, northEast);
 
 //Make the map object
-var map = L.mapbox.map('map', 'http://apps.startribune.com/news/20140629-bees-heatmap/bees1.tilejson', {
+var map = L.mapbox.map('map', './bees1.tilejson', {
       attributionControl: false,
       infoControl: false,
       zoomControl: false,
