--- a/20140629-bees/20140629-bees-migration-map/index.html
+++ b/20140629-bees/20140629-bees-migration-map/index.html
@@ -94,7 +94,7 @@ clear = document.getElementById('clear');
 
 //var osm = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-var dataTiles = L.mapbox.tileLayer('http://apps.startribune.com/news/tileserver/bees3.tilejson').addTo(map);
+var dataTiles = L.mapbox.tileLayer('./bees3.tilejson').addTo(map);
 //var dataGrid = L.mapbox.gridLayer('http://apps.startribune.com/news/tileserver/bees3.tilejson').addTo(map);
 //var dataControl = L.mapbox.gridControl(dataGrid).addTo(map);
 
