--- a/20170514-listings/builds/development/index.html
+++ b/20170514-listings/builds/development/index.html
@@ -127,7 +127,7 @@
 
 <div class="mobilekill source" id="key">starter home: under $250,000 | trade-up home: $250,000 to $500,000 | premium home: $500,000 and higher</div>
 
-<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 
 </div>
 
