--- a/20171215-taxes/pages/_main-index.ejs.html
+++ b/20171215-taxes/pages/_main-index.ejs.html
@@ -1,8 +1,8 @@
 <div id="wrapper">
 
 <div id="counties" class="slide">
-	<div class="chartTitle">Mapping taxes paid in Minnesota</div>
-	<div class="chatter">Shows average taxes paid per Minnesota county in 2015. Shaded from <span class="legendary gray1">less</span> to <span class="legendary gray5">more</span>.</div>
+	<div class="chartTitle">Counties with highest average deductions affected by tax reform bill</div>
+	<div class="chatter">This shows the average federal tax deductions taken in 2015 for state and local income taxes, general sales taxes and real estate taxes combined. Shaded from <span class="legendary gray1">less</span> to <span class="legendary gray5">more</span>.</div>
 	<div id="map" class="map"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
 	<div class="byline">Source: Internal Revenue Service | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
