--- a/20150203-shot/index.html
+++ b/20150203-shot/index.html
@@ -110,7 +110,7 @@
 <div class="breaker"></div>
 
 <section id="tab0" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/1_marcus_golden.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/1_marcus_golden.jpg" class="bio" />
 <br /><h2>Marcus Golden, 24</h2>
 <span class="stat">Date of Incident:</span> 1/14/2015<br />
 <span class="stat">Suspect's Weapon:</span> Loaded gun, vehicle<br />
@@ -122,7 +122,7 @@
 </section>
 
 <section id="tab1" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Guillermo Canas, 36</h2>
 <span class="stat">Date of Incident:</span> 8/28/2014<br />
 <span class="stat">Suspect's Weapon:</span> Rocks<br />
@@ -134,7 +134,7 @@
 </section>
 
 <section id="tab2" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Yee Vang, 20</h2>
 <span class="stat">Date of Incident:</span> 8/3/2014<br />
 <span class="stat">Suspect's Weapon:</span> Gun fired at officers<br />
@@ -146,7 +146,7 @@
 </section>
 
 <section id="tab4" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Alden Anderson, 32</h2>
 <span class="stat">Date of Incident:</span> 2/12/2013<br />
 <span class="stat">Suspect's Weapon:</span> Knife<br />
@@ -158,7 +158,7 @@
 </section>
 
 <section id="tab5" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Melvin Fletcher Jr 20</h2>
 <span class="stat">Date of Incident:</span> 12/17/2012<br />
 <span class="stat">Suspect's Weapon:</span> Gun<br />
@@ -170,7 +170,7 @@
 </section>
 
 <section id="tab6" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Chue Xiong, 22</h2>
 <span class="stat">Date of Incident:</span> 10/23/2012<br />
 <span class="stat">Suspect's Weapon:</span> Shotgun fired at officers<br />
@@ -182,7 +182,7 @@
 </section>
 
 <section id="tab7" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/7_victor_gaddy.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/7_victor_gaddy.jpg" class="bio" />
 <br /><h2>Victor Gaddy, 41</h2>
 <span class="stat">Date of Incident:</span> 10/23/2012<br />
 <span class="stat">Suspect's Weapon:</span> Car<br />
@@ -194,7 +194,7 @@
 </section>
 
 <section id="tab8" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/8_john_carr.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/8_john_carr.jpg" class="bio" />
 <br /><h2>John Carr, 36</h2>
 <span class="stat">Date of Incident:</span> 7/19/2010<br />
 <span class="stat">Suspect's Weapon:</span> Knives<br />
@@ -206,7 +206,7 @@
 </section>
 
 <section id="tab10" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/9_jason_jones.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/9_jason_jones.jpg" class="bio" />
 <br /><h2>Jason Jones, 21</h2>
 <span class="stat">Date of Incident:</span> 5/1/2010<br />
 <span class="stat">Suspect's Weapon:</span> Large bolt<br />
@@ -219,7 +219,7 @@
 
 
 <section id="tab12" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/10_romell_hill.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/10_romell_hill.jpg" class="bio" />
 <br /><h2>Romell Hill, 19</h2>
 <span class="stat">Date of Incident:</span> 12/7/2009<br />
 <span class="stat">Suspect's Weapon:</span> Gun fired at officers<br />
@@ -231,7 +231,7 @@
 </section>
 
 <section id="tab13" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/11_robert_jeske.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/11_robert_jeske.jpg" class="bio" />
 <br /><h2>Robert Jeske, 34</h2>
 <span class="stat">Date of Incident:</span> 4/6/2009<br />
 <span class="stat">Suspect's Weapon:</span> Gun<br />
@@ -243,7 +243,7 @@
 </section>
 
 <section id="tab9" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/12_donald_gartner.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/12_donald_gartner.jpg" class="bio" />
 <br /><h2>Donald Gartner, 34</h2>
 <span class="stat">Date of Incident:</span> 9/18/2007<br />
 <span class="stat">Suspect's Weapon:</span> Knife<br />
@@ -255,7 +255,7 @@
 </section>
 
 <section id="tab14" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Johnnie Rodgers, 54</h2>
 <span class="stat">Date of Incident:</span> 1/23/2004<br />
 <span class="stat">Suspect's Weapon:</span> Knife<br />
@@ -268,7 +268,7 @@
 </section>
 
 <section id="tab15" class="tab-content hide">
-<img src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
+<img alt="image" src="http://stmedia.startribune.com/images/cop_shoot_missing.jpg" class="bio" />
 <br /><h2>Justin Todd Tolkinen, 28</h2>
 <span class="stat">Date of Incident:</span> 3/16/2015<br />
 <span class="stat">Suspect's Weapon:</span> Rifle<br />
@@ -292,6 +292,7 @@
 <span class="block leg"  style='background:#66c2a4;'></span> <span class="leg">Hispanic</span>
 <span class="block leg"  style='background:#b2e2e2;'></span> <span class="leg">Asian</span>
 <span class="block leg"  style='background:#edf8fb;'></span> <span class="leg">White</span>
+</nav>
 </div>
 </div>
 </div>
