--- a/20170521-metcouncil/builds/development/index.html
+++ b/20170521-metcouncil/builds/development/index.html
@@ -21,7 +21,6 @@
 <div id="mapboxHolder">
 <div id="after" class="map"></div>
 <div id="before" class="map"></div>
-</dib>
 
 <div class="blockSpace"></div>
 
@@ -69,37 +68,37 @@ TEXT HERE
 </div> -->
 
 <div class="adjacent">
-<div class="chartHead"><img src="img/population.png" class="icon" />
+<div class="chartHead"><img src="img/population.png" alt="population" class="icon" />
 <div class="statLabel">Population: <span class="stat" id="population"></span> | <span id="populationChange" class="pct pos"></span> change</div></div>
 <div id="chartPop" class="chart"></div>
 </div>
 
 <div class="adjacent">
-<div class="chartHead"><img src="img/race-old.png" class="icon" />
+<div class="chartHead"><img src="img/race-old.png" alt="globe" class="icon" />
 <div class="statLabel">Developed Acres: <span class="stat" id="land"></span> | <span id="landChange" class="pct pos"></span> change</div></div>
 <div id="chartLand" class="chart"></div>
 </div>
 
 <div class="adjacent">
-<div class="chartHead"><img src="img/income.png" class="icon" />
+<div class="chartHead"><img src="img/income.png" alt="income" class="icon" />
 <div class="statLabel">Median Income: <span class="stat" id="income"></span> | <span id="incomeChange" class="pct pos"></span> change</div></div>
 <div id="chartIncome" class="chart"></div>
 </div>
 
 <div class="adjacent">
-<div class="chartHead"><img src="img/cost.png" class="icon" />
+<div class="chartHead"><img src="img/cost.png" alt="cost" class="icon" />
 <div class="statLabel">Poverty: <span class="stat" id="poverty"></span> | <span id="povertyChange" class="pct pos"></span> change</div></div>
 <div id="chartPoverty" class="chart"></div>
 </div>
 
 <div class="adjacent">
-<div class="chartHead"><img src="img/race.png" class="icon" />
+<div class="chartHead"><img src="img/race.png" alt="race" class="icon" />
 <div class="statLabel">Minorities: <span class="stat" id="minorities"></span>  | <span id="raceChange" class="pct pos"></span> change</div></div>
 <div id="chartRace" class="chart"></div>
 </div>
 
 <div class="adjacent">
-<div class="chartHead"><img src="img/education.png" class="icon" />
+<div class="chartHead"><img src="img/education.png" alt="education" class="icon" />
 <div class="statLabel">College Degrees: <span class="stat" id="degrees"></span> | <span id="degreesChange" class="pct pos"></span> change</div></div> 
 <div id="chartDegrees" class="chart"></div>
 </div>
