--- a/index_browse.html
+++ b/index_browse.html
@@ -425,7 +425,7 @@
 
 <div id="about">
 <img src="http://freyhargarten.com/_base/img/profile.jpg" width="200" id="profile" alt="profile" />
-<p>StribLab is the work of <a href="https://plus.google.com/+JeffHargarten" rel="me">Frey Hargarten</a> and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="bit.ly/2jmBjig" key="3C28 11FC 1FF9 860D 14B8 4EF3 E35E 9A4C 61B3 39DF">PGP Key</a></p>
+<p>StribLab is the work of <a href="https://plus.google.com/+JeffHargarten" rel="me">Frey Hargarten</a> and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaptation and repurposing.</p><p><a href="bit.ly/2jmBjig" key="3C28 11FC 1FF9 860D 14B8 4EF3 E35E 9A4C 61B3 39DF">PGP Key</a></p>
 
 <div class="breaker"></div>
 
